--- a/node/overlay/boot/grub.cfg
+++ b/node/overlay/boot/grub.cfg
@@ -12,7 +12,7 @@ set timeout=5
 
 
 menuentry 'pcmemtest' {
-    linuxefi /boot/pcmemtestx64.efi
+    linuxefi /pcmemtestx64.efi
 }
 
 #menuentry "Ubuntu Desktop 18.04" {
