--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -20,7 +20,8 @@ ROOT_SIZE=20000 #MByte, utilizzato solo nel caso di ridimensionamento di partizi
 SWAP_SIZE=1000 #MByte
 FLAG_VERSION="/etc/livenet/version"
 FLAG_NFS=/var/cache/livenet/nfs
-NFSOPTS="vers=3,retrans=10,nolock,rsize=32768,wsize=32768,async,noatime,hard,intr"
+#NFSOPTS="vers=3,retrans=10,nolock,rsize=32768,wsize=32768,async,noatime,hard,intr"
+NFSOPTS="vers=4,loud,nolock,async,noatime"
 NFSOPTSV4="vers=4,proto=tcp,timeo=20,soft,retry=0"
 NFSRO=ro
 XKBLAYOUT=it
