--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -8,6 +8,7 @@ STATENFS=/states # nfs share that holds states
 BACKUP=/backups/ # nfs share that holds backup
 ALLUPDATES=var/lib/livenet/updates # not absolute
 STATETMP=.state
+WORKDIR=.workdir
 ROOT_LABEL=LROOT
 SWAP_LABEL=LSWAP
 LIVENET_DIR=/livenet
@@ -30,7 +31,6 @@ NFSRO=ro
 XKBLAYOUT=it
 DHCP_TIMEOUT="2 3 4"
 accountsdaemon=true
-
 
 # services
 service_on=openssh-server
