--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -3,9 +3,9 @@
 
 #RELEASE=quantal-gamma
 LIVENET_ROOT_IP=0.0.0.0
-KERNEL=$( (readlink /boot/initrd.img || readlink /initrd.img) | sed -e 's/^.*initrd.img-//' )
-STATENFS=/states # nfs share that holds states
-BACKUP=/backups/ # nfs share that holds backup
+KERNEL=$( (readlink /boot/initrd.img || readlink /initrd.img) | sed -e 's/^.*initrd.img-//')
+STATENFS=/states                   # nfs share that holds states
+BACKUP=/backups/                   # nfs share that holds backup
 ALLUPDATES=var/lib/livenet/updates # not absolute
 STATETMP=.state
 WORKDIR=.workdir
@@ -21,7 +21,7 @@ ZFSROOT=VROOT
 
 ZONEINFO=Europe/Rome
 ROOT_SIZE=20000 #MByte, utilizzato solo nel caso di ridimensionamento di partizioni esistenti
-SWAP_SIZE=1000 #MByte
+SWAP_SIZE=1000  #MByte
 FLAG_VERSION="/etc/livenet/version"
 FLAG_NFS=/var/cache/livenet/nfs
 NFSOPTS="vers=3,retrans=10,nolock,rsize=32768,wsize=32768,async,noatime,hard,intr"
@@ -85,12 +85,11 @@ lens_off=gdocs.scope
 
 roottmppath=/tmp/.${ROOT_LABEL}
 
-mount_root ()
-{
+mount_root() {
     echo "Mounting root..."
 
     mkdir -p ${roottmppath}
-    umount ${roottmppath} > /dev/null 2>&1
+    umount ${roottmppath} >/dev/null 2>&1
     mount -o barrier=0,noatime,nodiratime LABEL=${ROOT_LABEL} ${roottmppath} 2>/dev/null
     if [ $? != 0 ]; then
         echo "ABORT: cannot mount root partition"
@@ -98,9 +97,8 @@ mount_root ()
     fi
 }
 
-umount_root ()
-{
-    umount -f ${roottmppath}/* >/dev/null 2>&1 
+umount_root() {
+    umount -f ${roottmppath}/* >/dev/null 2>&1
     umount -f ${roottmppath} >/dev/null 2>&1 && rmdir ${roottmppath}
 }
 
@@ -110,17 +108,18 @@ log_error() {
 
 PID_LOGX=
 ZFIFO=/tmp/.msg
-prepare_log_X () {
+
+prepare_log_X() {
     rm -f ${ZFIFO}
     mkfifo ${ZFIFO}
-    export DISPLAY=:0.0 
+    export DISPLAY=:0.0
     export XAUTHORITY=/var/run/lightdm/root/:0
     do_setbg login
-    ( tail --follow=name ${ZFIFO}  | zenity --progress --pulsate --no-cancel --auto-close --text "" ) &
+    (tail --follow=name ${ZFIFO} | zenity --progress --pulsate --no-cancel --auto-close --text "") &
     PID_LOGX=$!
 }
 
-kill_log_X () {
+kill_log_X() {
     killall zenity >/dev/null 2>&1
     rm -f ${ZFIFO}
     PID_LOGX=
@@ -129,7 +128,7 @@ kill_log_X () {
 log_X() {
     [ -n "${PID_LOGX}" ] || prepare_log_X
     echo "logger: $1"
-    echo "# " "$1" > ${ZFIFO}
+    echo "# " "$1" >${ZFIFO}
 }
 
 log_lightdm() {
@@ -145,6 +144,7 @@ dhcp_renew() {
     #dhclient -1 -pf /run/dhclient.eth0.pid -lf /var/lib/dhcp/dhclient.eth0.leases eth0
     dhclient -1
 }
+
 service_switch() {
     service=$1
     status=$2
@@ -155,7 +155,7 @@ service_switch() {
         sysv-rc-conf --list ${service} | grep -q "3:on" && sysv-rc-conf ${service} off
 
         if [ -f ${servicepath} ] && [ ! -f ${servicepath%%.conf}.override ]; then
-            echo "manual" > ${servicepath%%.conf}.override
+            echo "manual" >${servicepath%%.conf}.override
             echo "${service} switched off"
         fi
     fi
@@ -163,7 +163,7 @@ service_switch() {
         sysv-rc-conf --list ${service} | grep "3:off" && sysv-rc-conf ${service} on
 
         if [ -f ${servicepath%%.conf}.override ]; then
-            rm ${servicepath%%.conf}.override 
+            rm ${servicepath%%.conf}.override
             echo "${service} switched on"
         fi
     fi
@@ -173,10 +173,10 @@ check_alternative() {
     d=$1
     option=$2
 
-    f=${d#${LIVENET_DIR}}   
+    f=${d#${LIVENET_DIR}}
 
     # diversion
-    ########### 
+    ###########
     if [ -r ${d}.nfs.default ]; then
         if [ -h ${f} ]; then # is symbolic link
             rm -f ${f}
@@ -184,25 +184,25 @@ check_alternative() {
             [ -f ${f} ] && mv ${f} ${d}.local.standalone
         fi
         update-alternatives --remove-all $(basename $f) >/dev/null 2>&1
-	mkdir -p $( dirname ${f} )
+        mkdir -p $(dirname ${f})
         for instance in ${d}.?*.?* ${d##/livenet}.?*.?*; do
             [ -e ${instance} ] || continue
             update-alternatives --install $f $(basename $f) ${instance} 30
 
-            _profile=$( echo $instance | awk -F '.' '{ print $NF }' )
+            _profile=$(echo $instance | awk -F '.' '{ print $NF }')
             if [ ! -f /etc/livenet/local/livenet.conf.nfs.${_profile} ]; then
-                echo "PROFILE=${_profile}" > /etc/livenet/local/livenet.conf.nfs.${_profile}
+                echo "PROFILE=${_profile}" >/etc/livenet/local/livenet.conf.nfs.${_profile}
             fi
-        done 
+        done
         update-alternatives --set $(basename $f) ${d}.nfs.default
-    else 
-    # hard link ###
-    ########### 
+    else
+        # hard link ###
+        ###########
         if [ ! -f ${d} ]; then
             log_error "no diversion at ${d}.nfs.default and no link at ${d}"
             return 1
         fi
-	mkdir -p $( dirname ${f} )
+        mkdir -p $(dirname ${f})
         if [ -h ${f} ]; then
             rm -f ${f}
         fi
@@ -220,7 +220,7 @@ check_alternative() {
 
 do_update_alternatives() {
     filename=$1
-    key=$( basename ${filename} )
+    key=$(basename ${filename})
     profile=${PROFILE}
     for f in \
         ${filename}.${ROOTMOUNTED}.${profile} \
@@ -231,10 +231,10 @@ do_update_alternatives() {
         ${LIVENET_DIR}${filename}.${ROOTMOUNTED}.default \
         ${LIVENET_DIR}${filename}.nfs.${profile} \
         ${LIVENET_DIR}${filename}.nfs.default; do
-	if [ -r ${f} ]; then
-    	    update-alternatives --set ${key} ${f}
-	    return
-	fi
+        if [ -r ${f} ]; then
+            update-alternatives --set ${key} ${f}
+            return
+        fi
     done
     echo "ERROR: no alternative for ${filename}"
 }
@@ -242,38 +242,38 @@ do_update_alternatives() {
 parse_kernel_args() {
     [ -f /proc/cmdline ] || return
     for x in $(cat /proc/cmdline); do
-	case $x in
-	livenet_device=*)
-	    export DEVICE=${x#livenet_device=}
-	    ;;
-	livenet_ssid=*)
-	    export SSID=${x#livenet_ssid=}
-	    ;;
-	livenet_debug=*)
-	    export LIVENET_DEBUG=${x#livenet_debug=}
-	    ;;
-	livenet_root=*)
+        case $x in
+        livenet_device=*)
+            export DEVICE=${x#livenet_device=}
+            ;;
+        livenet_ssid=*)
+            export SSID=${x#livenet_ssid=}
+            ;;
+        livenet_debug=*)
+            export LIVENET_DEBUG=${x#livenet_debug=}
+            ;;
+        livenet_root=*)
             export LIVENET_ROOT=${x#livenet_root=}
             ;;
-	nfsroot=*)
+        nfsroot=*)
             export LIVENET_ROOT=${x#nfsroot=}
             ;;
-	livenet_profile=*)
+        livenet_profile=*)
             export PROFILE=${x#livenet_profile=}
             ;;
-	profile=*)
+        profile=*)
             export PROFILE=${x#profile=}
             ;;
-	livenet_action=*)
+        livenet_action=*)
             export LIVENET_ACTION=${x#livenet_action=}
             ;;
-	livenet_action_end=*)
+        livenet_action_end=*)
             export LIVENET_ACTION_END=${x#livenet_action_end=}
             ;;
-	PROFILE=*)
+        PROFILE=*)
             export PROFILE=${x#PROFILE=}
             ;;
-	esac
+        esac
     done
 }
 
@@ -286,7 +286,6 @@ mount_livenet_root() {
     do_log "try mount LIVENET_ROOT ${NFSOPTS} ${LIVENET_ROOT}"
     mount -t nfs -o ro,${NFSOPTS} ${LIVENET_ROOT} $1 2>/dev/null
 }
-
 
 # used in ln-client, ln-vms
 do_setbg() {
@@ -306,8 +305,7 @@ for conf in \
     /etc/livenet/livenet.conf.override \
     /conf/livenet.conf.override \
     /etc/livenet/local/livenet.conf \
-    /etc/livenet/local/host.conf \
-    ;do
+    /etc/livenet/local/host.conf; do
     [ -f ${conf} ] && . ${conf}
 done
 
@@ -318,7 +316,6 @@ PROFILE=${PROFILE:=default}
 
 RELEASE=${LIVENET_ROOT##*/}
 FLAG_RELEASE="/etc/livenet/release_${RELEASE}"
-
 
 export PROFILE
 export DEVICE
