--- a/node/Taskfile.yml
+++ b/node/Taskfile.yml
@@ -84,15 +84,20 @@ tasks:
         sudo ip addr add 192.168.124.223 dev mcvlan-ingress
         sudo ip link set mcvlan-ingress up
         sudo ip route add 192.168.124.192/27 dev mcvlan-ingress
-
-        
         docker compose down
+
+  vm:disk:
+    cmds:
+      - |
+        [ -f ${DISK} ] || qemu-img create -f qcow2 -o preallocation=metadata ${DISK} 60G
 
   vm:bios:
     desc: "boot vm in uefi: see 4.3 on https://wiki.archlinux.org/title/QEMU"
     cmds:
+      - task: vm:disk
       - |
-        qemu-system-x86_64 -nographic -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=livenet,id=net0 
+        qemu-system-x86_64 -nographic -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=livenet,id=net0 \
+          -drive id=vda,file=${DISK}
         #  -drive if=pflash,format=raw,readonly=on,file=OVMF_CODE.fd \
         #  -drive if=pflash,format=raw,file=/tmp/OVMF_VARS.fd
   
