--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -149,23 +149,25 @@ service_switch() {
     service=$1
     status=$2
 
-    servicepath=/etc/init/${service}.conf
+    #servicepath=/etc/init/${service}.conf
 
     if [ "${status}" = "off" ]; then
-        sysv-rc-conf --list ${service} | grep -q "3:on" && sysv-rc-conf ${service} off
+        systemctl disable $service
+        # sysv-rc-conf --list ${service} | grep -q "3:on" && sysv-rc-conf ${service} off
 
-        if [ -f ${servicepath} ] && [ ! -f ${servicepath%%.conf}.override ]; then
-            echo "manual" >${servicepath%%.conf}.override
-            echo "${service} switched off"
-        fi
+        # if [ -f ${servicepath} ] && [ ! -f ${servicepath%%.conf}.override ]; then
+        #     echo "manual" >${servicepath%%.conf}.override
+        #     echo "${service} switched off"
+        # fi
     fi
     if [ "${status}" = "on" ]; then
-        sysv-rc-conf --list ${service} | grep "3:off" && sysv-rc-conf ${service} on
+        systemctl enable $service
+        # sysv-rc-conf --list ${service} | grep "3:off" && sysv-rc-conf ${service} on
 
-        if [ -f ${servicepath%%.conf}.override ]; then
-            rm ${servicepath%%.conf}.override
-            echo "${service} switched on"
-        fi
+        # if [ -f ${servicepath%%.conf}.override ]; then
+        #     rm ${servicepath%%.conf}.override
+        #     echo "${service} switched on"
+        # fi
     fi
 }
 
