--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -266,6 +266,9 @@ parse_kernel_args() {
         profile=*)
             export PROFILE=${x#profile=}
             ;;
+        livenet_format=*)
+            export LIVENET_FORMAT=${x#livenet_format=}
+            ;;
         livenet_action=*)
             export LIVENET_ACTION=${x#livenet_action=}
             ;;
