--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -24,7 +24,8 @@ RUN DEBIAN_FRONTEND=noninteractive RESUME=auto \
 
 RUN DEBIAN_FRONTEND=noninteractive RESUME=auto \
   apt-get install -y \
-    gdisk
+    gdisk \
+    openssh-server
 
 RUN locale-gen en_GB.UTF-8
 RUN locale-gen it_IT.UTF-8
