--- a/node/Taskfile.yml
+++ b/node/Taskfile.yml
@@ -20,12 +20,7 @@ tasks:
     cmds:
       - mkdir -p runtime
       - touch runtime/bash_history
-      # - sudo ip link add dummy0 type dummy || true
-      # - sudo ip link set dummy0 up
-      # - sudo ip link set dummy0 master livenet || true
-      #- sudo iptables -P FORWARD ACCEPT
       - docker compose up
-      #- docker run --name lnode -it -d -p 2049:2049 -p 20048:20048 ${IMAGE} || true
 
   logs:
     cmds:
@@ -34,30 +29,32 @@ tasks:
   cli:
     cmds:
       - docker compose exec lnode bash
-      #- docker run --name lnode -it -d ${IMAGE} || true
-      #- task: run
-      #- docker exec -it ${NODE} bash
+
+  cli:ssh:
+    cmds:
+      - ssh root@192.168.124.18
 
   diff:
     cmds:
       - docker diff ${NODE}
 
   commit:
-    desc: task commit -- 0.2
+    desc: task commit -- 0.0.1
     vars:
       Id: Id
     cmds:
       - |
         ID=$(docker container ls --all --quiet --no-trunc --filter "name=${NODE}")
-        docker commit ${ID} livenet/node:{{.CLI_ARGS}}
+        RELEASE={{.CLI_ARGS}}
+        docker diff ${NODE} > releases/${RELEASE}.diff
+        docker commit ${ID} livenet/node:${RELEASE}
+        docker export ${NODE} --output="releases/${RELEASE}.tar"
+        gzip releases/${RELEASE}.tar
 
   destroy:
     cmds:
       - docker compose down
       - docker images | grep livenet/node | awk '{print $3}' | xargs docker rmi
-      #- docker container stop ${NODE} || true
-      #- docker container rm ${NODE}
-
 
   mount:
     cmds:
@@ -66,12 +63,6 @@ tasks:
       - ls /tmp/test
       - sudo umount /tmp/test
 
-  # kernel:copy:
-  #   cmds:
-  #     - docker cp lnode:/boot/initrd.img-5.15.0-76-generic ../server/boot/jammy/initrd
-  #     - docker cp lnode:/boot/vmlinuz-5.15.0-76-generic ../server/boot/jammy/kernel
-
-
   network:
     desc: create livenet network
     cmds:
@@ -79,12 +70,6 @@ tasks:
         sudo virsh net-info livenet && sudo virsh net-destroy livenet || true
         sudo virsh net-define libvirt/net-livenet.xml
         sudo virsh net-start livenet
-        # docker network rm livenet_macvlan 2>/dev/null || true 
-        # docker network create -d macvlan --subnet=192.168.124.0/24 --gateway=192.168.124.1 --aux-address="host=192.168.124.223" --ip-range=192.168.124.192/27  -o parent=livenet livenet_macvlan || true
-        # sudo ip link add mcvlan-ingress link livenet type macvlan mode bridge
-        # sudo ip addr add 192.168.124.223 dev mcvlan-ingress
-        # sudo ip link set mcvlan-ingress up
-        # sudo ip route add 192.168.124.192/27 dev mcvlan-ingress
         docker compose down
 
   vm:disk:
