--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -5,7 +5,7 @@
 LIVENET_ROOT_IP=0.0.0.0
 KERNEL=$( (readlink /boot/initrd.img || readlink /initrd.img) | sed -e 's/^.*initrd.img-//')
 STATENFS=/states                   # nfs share that holds states
-BACKUP=/backups/                   # nfs share that holds backup
+BACKUP=/mnt/releases/                   # nfs share that holds backup
 ALLUPDATES=var/lib/livenet/updates # not absolute
 STATETMP=.state
 WORKDIR=.workdir
