--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -26,7 +26,8 @@ RUN DEBIAN_FRONTEND=noninteractive RESUME=auto \
   apt-get install -y \
     gdisk \
     openssh-server \
-    pigz
+    pigz \
+    rsync
 
 RUN locale-gen en_GB.UTF-8
 RUN locale-gen it_IT.UTF-8
