--- a/node/overlay/etc/rsyncd.conf
+++ b/node/overlay/etc/rsyncd.conf
@@ -1,5 +1,8 @@
-[files]
-	path = /mnt/overlay
+use chroot = true
+max connections = 20
+
+[overlay]
+    path = /mnt/overlay
     comment = overlay area
     read only = true
     timeout = 300
