--- a/node/overlay/boot/grub.cfg
+++ b/node/overlay/boot/grub.cfg
@@ -10,13 +10,20 @@ set menu_color_normal=white/black
 set menu_color_highlight=black/light-gray
 set timeout=5
 
+menuentry "Ubuntu 22.04 - live" {
+  set gfxpayload=keep
+  linux /vmlinuz ro livenet_root=192.168.124.1:/ boot=livenet livenet_profile=default net.ifnames=0 biosdevname=0
+  initrd /initrd.img
+}
+
+# menuentry "Local disk" {
+#     insmod chain
+#     search --set=root --file /EFI/centos/grubx64.efi
+#     chainloader /EFI/centos/grubx64.efi
+# }
+
 
 menuentry 'pcmemtest' {
     linuxefi /pcmemtestx64.efi
 }
 
-#menuentry "Ubuntu Desktop 18.04" {
-#   set gfxpayload=keep
-#   linux /boot/casper/vmlinuz ip=dhcp nfsroot=192.168.1.150:/var/www/html/bionic/desktop netboot=nfs ro file=/cdrom/preseed/ubuntu.seed boot=casper systemd.mask=tmp.mount --
-#   initrd /boot/casper/initrd.lz
-#}
