--- a/node/Taskfile.yml
+++ b/node/Taskfile.yml
@@ -14,6 +14,7 @@ tasks:
     desc: build li
     cmds:
       - BUILDKIT_PROGRESS=plain docker compose build 
+      - rm -f releases/*
       #- docker export $(docker create ${IMAGE}) --output="livenet.tar"
 
   start:
