--- a/node/Taskfile.yml
+++ b/node/Taskfile.yml
@@ -22,8 +22,6 @@ tasks:
       - mkdir -p runtime releases
       - touch runtime/bash_history
       - docker compose up -d
-      - sleep 2
-      - docker compose logs -f
 
   logs:
     cmds:
@@ -47,7 +45,8 @@ tasks:
     cmds:
       - |
         ID=$(docker container ls --all --quiet --no-trunc --filter "name=${NODE}")
-        RELEASE={{.CLI_ARGS}}
+        RELEASE={{.RELEASE}}
+        [ -n "$RELEASE" ] || RELEASE={{.CLI_ARGS}}
         docker diff ${NODE} | docker compose exec -T lnode ln-mng --commit $RELEASE
         docker commit ${ID} livenet/node:${RELEASE}
         docker export ${NODE} --output="releases/${RELEASE}.tar"
@@ -59,9 +58,14 @@ tasks:
   destroy:
     cmds:
       - sudo rm -f releases/*
+      - sed -i "s/VERSION=.*/VERSION=latest/" .env
       - docker compose down
       - docker images | grep livenet/node | awk '{print $3}' | xargs docker rmi
-
+      - task: start
+      - sleep 2
+      - task: commit
+        vars:
+          RELEASE: 0.0.1
   mount:
     cmds:
       - mkdir -p /tmp/test
