--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -310,6 +310,7 @@ for conf in \
     /etc/livenet/livenet.conf.override \
     /conf/livenet.conf.override \
     /etc/livenet/local/livenet.conf \
+    /etc/livenet/version \
     /etc/livenet/local/host.conf; do
     [ -f ${conf} ] && . ${conf}
 done
