--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -283,13 +283,33 @@ parse_kernel_args() {
 }
 
 # used in 00-update
-mount_livenet_root() {
-    # nfsv4 require idmapd here
-    #mount -t nfs -o ro,vers=4,proto=tcp,timeo=30,soft,retry=0 ${LIVENET_ROOT} $1 2>/dev/null
+# mount_livenet_root() {
+#     # nfsv4 require idmapd here
+#     #mount -t nfs -o ro,vers=4,proto=tcp,timeo=30,soft,retry=0 ${LIVENET_ROOT} $1 2>/dev/null
 
-    # nfsv3
-    do_log "try mount LIVENET_ROOT ${NFSOPTS} ${LIVENET_ROOT}"
-    mount -t nfs -o ro,${NFSOPTS} ${LIVENET_ROOT} $1 2>/dev/null
+#     # nfsv3
+#     do_log "try mount LIVENET_ROOT ${NFSOPTS} ${LIVENET_ROOT}"
+#     mount -t nfs -o ro,${NFSOPTS} ${LIVENET_ROOT} $1 2>/dev/null
+# }
+
+mount_livenet_root() {
+    echo
+}
+
+
+mount_livenet_releases() {
+    backupmnt=/tmp/.backup
+    mkdir -p ${backupmnt}
+
+    mountpoint -q ${backupmnt} && umount ${backupmnt}
+    BACKUPSERVER=${LIVENET_ROOT%%:*}
+    echo "Try to mount from ${BACKUPSERVER}:${BACKUP} ..."
+    mount -o vers=4,proto=tcp,ro,timeo=30,retry=0,soft,rsize=262144 ${BACKUPSERVER}:${BACKUP} ${backupmnt}
+    mountpoint -q ${backupmnt} || (
+        echo "Error to mount $BACKUPSERVER, skip upgrade"
+        return 1
+    )
+    #archive=$(ls ${backupmnt}/*-diff.tar.* | tail -n1)
 }
 
 # used in ln-client, ln-vms
