--- a/node/Taskfile.yml
+++ b/node/Taskfile.yml
@@ -60,7 +60,7 @@ tasks:
       - sudo rm -f releases/*
       - sed -i "s/VERSION=.*/VERSION=latest/" .env
       - docker compose down
-      - docker images | grep livenet/node | awk '{print $3}' | xargs docker rmi
+      - docker images | grep livenet/node | awk '{print $3}' | xargs docker rmi || true
       - task: build
       - task: start
       - sleep 2
