sync overlay function

--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -312,6 +312,14 @@ mount_livenet_releases() {
     #archive=$(ls ${backupmnt}/*-diff.tar.* | tail -n1)
 }
 
+
+sync_overlay() {
+    echo "Sync remote overlay ..."
+    LIVENET_HOST=$( echo ${LIVENET_ROOT} | awk -F ':' '{ print $1 }' )
+    rsync -a ${LIVENET_HOST}::overlay/etc/ etc/
+    rsync -a ${LIVENET_HOST}::overlay/usr/ usr/
+}
+
 # used in ln-client, ln-vms
 do_setbg() {
     WALL=$1
